v1.11.1

 AI:
  - Fixed the AI not being able to recruit nor building facilities
  - AI should no longer get a bonus due to some improvement in foreign influence handling
  - Mutual Investment Treaties now reduce the AI's willingess to do the "Increase Autonomy" continuous focus
  - AI should now avoid raiding you again if they have paid reparations to you

 Balance:
  - Reduced the taxing religious institutions income a little bit
  - Reduced the frequency of the "Labour Unions Protest Migration"
  - Clamp the "Religious Group Request in Government" pp to a maximum of 500
  - Reduced some buffs from Irans nuclear tree
  - Reduced amount opinion lost from doing raids
  - Reduced the amount of tension generated from multiples sources and slightly increased decay so small scale wars do not instantly rocket the world tension
  - Removed the Surrender Limit from the nuclear ideas for the time being

 Bugfix:
  - Fixed the Automatic Debt Repayment forcing you into the negatives
  - Fixed the configurable UI display for resources and tax cost factor breaking
  - Fixed an issue that caused crashing if you hovered over 2 Syrian focuses
  - Fixed an issue with localization for the Iranian nuclear tree if the U.S. does not exist
  - Augmented Vision techs now correctly show after copmleting their special project
  - Fixed the missing icon for High Efficiency Engines doctrine
  - Fixed tank guns requiring heavy tank turret to be always mounted
  - Fixed the Space Program special projects not being researchable due to needing a DLC tech
  - Fixed trigger for Poland checking for removed idea, bloating the logs

 Content:
  - Added several new Internal Faction Events
  - Added an option to not condemn raids if you aren't the one being attacked (before you always lost opinion)

 Database:
  - Added "Nuclear Energy" to all of the nations who have nuclear reactors
  - Enabled submarine based ICBMs
  - Add back NIRBM to nations who previously had the tech