@@ -4455,8 +4455,14 @@ focus_tree = {
 		search_filters = { FOCUS_FILTER_POLITICAL }
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus SER_eu_integration"
-			FRA = {
-				country_event = SerbiaFocus.14
+			if = {
+				limit = {
+					country_exists = FRA
+					NOT = { has_war_with = FRA }
+				}
+				FRA = {
+					country_event = SerbiaFocus.14
+				}
 			}
 			every_country = {
 				limit = {
@@ -4473,6 +4479,7 @@ focus_tree = {
 			set_temp_variable = { modify_eurosceptic = -0.05 }
 			EU_eurosceptic_change = yes
 		}
+
 		ai_will_do = {
 			base = 1
 		}
@@ -4872,10 +4879,10 @@ focus_tree = {
 
 		x = 0
 		y = 4
+		relative_position_id = SER_bluechip_corporations
+
 		cost = 5
-		prerequisite = {
-			focus = SER_renewed_serbia
-		}
+
 		available = {
 			NOT = {
 				OR = {
@@ -4885,27 +4892,55 @@ focus_tree = {
 				}
 			}
 		}
-		relative_position_id = SER_bluechip_corporations
+
+		prerequisite = { focus = SER_renewed_serbia }
 		search_filters = { FOCUS_FILTER_POLITICAL }
+
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus SER_european_investment"
-			GER = {
-				country_event = SerbiaFocus.14
+			if = {
+				limit = {
+					country_exists = GER
+					NOT = { has_war_with = GER }
+				}
+				GER = {
+					country_event = SerbiaFocus.14
+				}
 			}
-			POL = {
-				country_event = SerbiaFocus.14
+			if = {
+				limit = {
+					country_exists = POL
+					NOT = { has_war_with = POL }
+				}
+				POL = {
+					country_event = SerbiaFocus.14
+				}
 			}
-			ITA = {
-				country_event = SerbiaFocus.14
+			if = {
+				limit = {
+					country_exists = ITA
+					NOT = { has_war_with = ITA }
+				}
+				ITA = {
+					country_event = SerbiaFocus.14
+				}
 			}
-			ROM = {
-				country_event = SerbiaFocus.14
+			if = {
+				limit = {
+					country_exists = ROM
+					NOT = { has_war_with = ROM }
+				}
+				ROM = {
+					country_event = SerbiaFocus.14
+				}
 			}
 		}
+
 		ai_will_do = {
 			base = 1
 		}
 	}
+
 	focus = {
 		id = SER_free_elections_again
 		icon = Generic_Liberalism
