@@ -773,6 +773,23 @@ scripted_diplomatic_actions = {
 			}
 			modifier = {
 				factor = 0
+				set_temp_variable = { tmp = debt }
+				multiply_temp_variable = { tmp = 0.25 }
+				ROOT = {
+					set_temp_variable = { debt_temp = debt }
+					add_to_temp_variable = { debt_temp = PREV.tmp }
+
+					set_temp_variable = { interest_rate_temp = debt_temp }
+					divide_temp_variable = { interest_rate_temp = gdp_total }
+					multiply_temp_variable = { interest_rate_temp = 10 }
+
+					set_temp_variable = { interest_rate_temp_multiplier = modifier@interest_rate_multiplier_modifier }
+					add_to_temp_variable = { interest_rate_temp = interest_rate_temp_multiplier }
+				}
+				check_variable = { ROOT.interest_rate_temp > 8.99 }
+			}
+			modifier = {
+				factor = 0
 				OR = {
 					ROOT = { NOT = { check_variable = { pending_assume_debt_offer = 0 } } }
 					ROOT = { check_variable = { interest_rate > 8 } }
