@@ -634,6 +634,11 @@ sp_space_weapons = {
 	special_project_parent = {
 		sp_space_program
 	}
+	visible = {
+		FROM = {
+			is_special_project_completed = sp:sp_space_program
+		}
+	}
 
 	prototype_time = sp_time.prototype.very_long
 
