@@ -1901,25 +1901,68 @@ country_event = {
 	id = SerbiaFocus.14
 	title = SerbiaFocus.14.t
 	desc = SerbiaFocus.14.d
-	is_triggered_only = yes
 	picture = GFX_mars_colony_20
+	is_triggered_only = yes
+
 	option = {
 		name = SerbiaFocus.14.a
 		log = "[GetDateText]: [This.GetName]: SerbiaFocus.14.a executed"
-		ai_chance = {
-			base = 1
-			modifier = {
-				add = 0.2
-				has_opinion = {
-					target = SER
-					value > 10
+
+		SER = {
+			random_owned_controlled_state = {
+				limit = {
+					free_building_slots = {
+						building = internet_station
+						size > 0
+					}
+					OR = {
+						is_in_home_area = yes
+						NOT = {
+							owner = {
+								any_owned_state = {
+									free_building_slots = {
+										building = internet_station
+										size > 0
+									}
+									is_in_home_area = yes
+								}
+							}
+						}
+					}
+				}
+				add_building_construction = {
+					type = internet_station
+					level = 1
+					instant_build = yes
 				}
 			}
-		}
-		SER = {
-			two_random_network_infrastructure = yes
-			set_temp_variable = { treasury_change = 6 }
-			modify_treasury_effect = yes
+			random_owned_controlled_state = {
+				limit = {
+					free_building_slots = {
+						building = internet_station
+						size > 0
+					}
+					OR = {
+						is_in_home_area = yes
+						NOT = {
+							owner = {
+								any_owned_state = {
+									free_building_slots = {
+										building = internet_station
+										size > 0
+									}
+									is_in_home_area = yes
+								}
+							}
+						}
+					}
+				}
+				add_building_construction = {
+					type = internet_station
+					level = 1
+					instant_build = yes
+				}
+			}
 			set_temp_variable = { percent_change = 5 }
 			set_temp_variable = { tag_index = ROOT }
 			set_temp_variable = { influence_target = SER }
@@ -1928,21 +1971,34 @@ country_event = {
 		}
 		set_temp_variable = { treasury_change = -6 }
 		modify_treasury_effect = yes
-	}
-	option = {
-		name = SerbiaFocus.14.b
-		log = "[GetDateText]: [This.GetName]: SerbiaFocus.14.a executed"
+
 		ai_chance = {
 			base = 1
 			modifier = {
-				add = 0.2
+				add = 0.5
+				has_opinion = {
+					target = SER
+					value > 10
+				}
+			}
+		}
+	}
+
+	option = {
+		name = SerbiaFocus.14.b
+		log = "[GetDateText]: [This.GetName]: SerbiaFocus.14.a executed"
+		SER = { country_event = SerbiaFocus.16 }
+
+		ai_chance = {
+			base = 1
+			modifier = {
+				add = 0.5
 				has_opinion = {
 					target = SER
 					value < 10
 				}
 			}
 		}
-		SER = { country_event = SerbiaFocus.16 }
 	}
 }
 
