@@ -469,7 +469,7 @@
  SER_idea_diversify_economy: "Economy Diversification"
  ##########Events##########
  ser_invest.1.t: "Serbia Asks For Investments!"
- ser_invest.1.d: "Serbia asks us to invest in them should we agree?"
+ ser_invest.1.d: "The Serbian government has sent a delegation to us to work on investment deals. The investment deal appears to be outlining the expansion of Network Infrastructure within their country. Should we agree to the investment deal with Serbia?"
  ser_invest.1.a: "Sure!"
  ser_invest.1.b: "Sorry, no"
  ser_invest.2.t: "[FROM.GetNamewithFlag] Has Agreed To Invest In Us"
@@ -987,10 +987,10 @@
  SerbiaFocus.14.d: "Serbia asks us to invest in them should we agree?"
  SerbiaFocus.14.a: "Sure!"
  SerbiaFocus.14.b: "Sorry, no"
- SerbiaFocus.15.t: "[FRA.GetNamewithFlag] Accepts!"
+ SerbiaFocus.15.t: "[FROM.GetNamewithFlag] Accepts!"
  SerbiaFocus.15.d: "They will invest in us."
  SerbiaFocus.15.a: "Great"
- SerbiaFocus.16.t: "[FRA.GetNamewithFlag] did not accept our offer."
+ SerbiaFocus.16.t: "[FROM.GetNamewithFlag] did not accept our offer."
  SerbiaFocus.16.d: "They don't want to invest in us."
  SerbiaFocus.16.a: "Ugh"
  SerbiaFocus.13.t: "Serbian War Criminals Arrested in Serbia!"
