@@ -5,6 +5,7 @@ v1.11.1
   - AI should no longer get a bonus due to some improvement in foreign influence handling
   - Mutual Investment Treaties now reduce the AI's willingess to do the "Increase Autonomy" continuous focus
   - AI should now avoid raiding you again if they have paid reparations to you
+  - AI will now evaluate what the assumption of debt will actually do to its interest rate
 
  Balance:
   - Reduced the taxing religious institutions income a little bit
@@ -14,6 +15,7 @@ v1.11.1
   - Reduced amount opinion lost from doing raids
   - Reduced the amount of tension generated from multiples sources and slightly increased decay so small scale wars do not instantly rocket the world tension
   - Removed the Surrender Limit from the nuclear ideas for the time being
+  - "Assume Debt" now requires the target nation to not have more than double your GDP
 
  Bugfix:
   - Fixed the Automatic Debt Repayment forcing you into the negatives
@@ -52,6 +54,7 @@ v1.11.1
 
  Localization:
   - Fixed missing tooltip for Medium Naval Nuclear Engines
+  - Improved the localization of the "Serbia Asks for Investments" event
 
  Special Projects:
   - Super Heavy Tank Turrets are now locked behind both "Large Gun Tech" & 4th Generation Tank Hulls
